<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_main"
        android:text="@string/textview_main"
        android:textSize="45sp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_mainsub"
        android:text="@string/textview_mainsub"
        android:layout_below="@id/textview_main"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        android:background="@color/transparent"
        android:layout_below="@id/textview_mainsub"
        android:layout_marginTop="25dp"
        android:paddingBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp"
                android:hint="@string/username"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="fiand" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="KKeqTPROAYU=" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/button_login" />

            <TextView
                android:id="@+id/textview_lupapassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_lupapassword"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:clickable="true" />
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageview"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/logo_icon"
        android:contentDescription="@string/hello_world"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
